# bangumi-grillmaster

./: .env.example  .gitignore  AGENTS.md  README.md  article.md  biome.json  burn_sub.bat  components.json  download.bat  drizzle.config.ts  instrumentation.ts  main.py  next.config.ts  package.json  pnpm-lock.yaml  project.py  pyproject.toml  settings.py  tsconfig.json  utils.py  workflow.py
.agents/rules/: code.md  run-command.md
.claude/: CLAUDE.md
drizzle/: 0000_late_cable.sql  0001_bumpy_payback.sql  0002_closed_molecule_man.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
pages/: _app.tsx  index.tsx
pages/projects/: [projectId].tsx  index.tsx
pages/tasks/: [taskId].tsx  index.tsx
pages/videos/: [projectId].tsx
scripts/: grill.bat
server/: env.ts
server/core/: errors.ts  logger.ts  retry.ts
server/db/: client.ts  repository.ts  schema.ts
services/: asr.py  bilibili.py  downloader.py  media.py  progress.py
shared/: constants.ts  domain.ts  view-models.ts
styles/: globals.css
tests/: test_ass_converter.py  test_chunk_fix.py  test_elevenlabs_asr.py  test_elevenlabs_srt.py  test_finalize_subtitles.py  test_fixed_glossary.py  test_gemini_assets.py  test_gemini_cli_prepass.py  test_gemini_inline_media.py  test_gemini_normalizer.py  test_gemini_storage.py  test_glossary_check.py  test_main.py  test_media.py  test_package.py  test_progress_integration.py  test_project.py  test_project_costs.py  test_qwen3_asr.py  test_workflow_breakpoints.py  test_workflow_costs.py  test_ytdlp_info.py
(+102 files in other folders)
