[project]
name = "bangumi-grillmaster"
version = "0.1.0"
description = "japanese tv show transcription"
requires-python = ">=3.13"
dependencies = [
    "alibabacloud-oss-v2>=1.2.2",
    "dashscope>=1.25.9",
    "ffmpeg-python>=0.2.0",
    "google-genai>=1.60.0",
    "litellm>=1.54.0",
    "loguru>=0.7.3",
    "onnxruntime-gpu>=1.25.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "qwen-asr>=0.0.6",
    "librosa>=0.11.0",
    "silero-vad>=6.2.0",
    "soundfile>=0.13.1",
    "torch",
    "typer>=0.21.1",
    "yt-dlp>=2026.1.29",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true  # Prevents uv from using this index for other packages

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
